Made NavBar Color Black

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-color: #080808;
 }
 .logo{
     width:275px;
