--- a/styles.css
+++ b/styles.css
@@ -434,11 +434,11 @@ nav .fa-solid{
 }
 
 #myBtn{
-  display: grid;
+  display: block;
   position: fixed;
   bottom: 20px;
   right: 30px;
-  z-index: 100000;
+  z-index: 10000;
   box-shadow: 0 0 10px #E0BE96;
   text-decoration: none;
   text-align: center;
