--- a/styles.css
+++ b/styles.css
@@ -47,9 +47,10 @@ body{
     padding: 10px 10%;
 }
 nav{
+    left: 0px;
     top: 0px;
-    width: 85%;
-    position: fixed;
+    width: 100%;
+    position: fixed; 
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -60,7 +61,9 @@ nav{
     z-index: 1;
 }
 .logo{
+    position: relative;
     width:275px;
+    left: 100px;
 }
 
 nav ul li{
@@ -89,12 +92,16 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 20%;
+    margin-top: 25%;
     font-size: 30px;
+}
+.header-text p{
+    color: #fff;
 }
 .header-text h1{
     font-size: 60px;
     margin-top: 20px;
+    color: #fff;
 }
 .header-text h1 span{
     color: #E0BE96;
